--- a/app/webroot/css/jcarousel.responsive.css
+++ b/app/webroot/css/jcarousel.responsive.css
@@ -1,5 +1,5 @@
 .jcarousel-wrapper {
-    margin: 20px auto;
+    margin: 20px auto 30px auto;
     position: relative;
     border: 10px solid #fff;
     -webkit-border-radius: 5px;
