--- a/app/webroot/css/main-style.v1.css
+++ b/app/webroot/css/main-style.v1.css
@@ -2142,7 +2142,7 @@ margin-right: 15px;
 margin-right: 0;
 }
 .tyresBox h2.tyres {
-background-image: url("../img/tyres.v1.jpg");
+background-image: url("../img/tyres.jpg");
 background-position: 10px 0;
 background-repeat: no-repeat;
 border-bottom: 3px solid #333333;
