--- a/app/webroot/css/main-style.v1.css
+++ b/app/webroot/css/main-style.v1.css
@@ -3658,6 +3658,7 @@ table.withlines {
 
 .car__sizes__info {
   display: flex;
+  flex-direction: column;
   gap: 30px;
   flex-wrap: wrap;
 }
@@ -3667,8 +3668,34 @@ table.withlines {
   object-fit: contain;
   max-height: 120px;
   margin: auto;
+  object-position: top;
 }
 
 .disk-wrapper {
   width: 100%;
+}
+
+.car__sizes__diameters {
+  display: flex;
+}
+
+.car__sizes__diameters a {
+  border: 1px solid rgb(169, 166, 174);
+  height: 33px;
+  padding: 0 15px;
+  color: rgb(51, 51, 51);
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  text-decoration: auto;
+  font-size: 14px;
+}
+.car__sizes__diameters a:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.car__sizes__diameters a:last-child {
+  border-radius: 0 10px 10px 0;
+}
+.car__sizes__diameters .active-diameter {
+  background-color: #e7e7e7;
 }
