--- a/app/webroot/css/main-style.v1.css
+++ b/app/webroot/css/main-style.v1.css
@@ -2143,7 +2143,7 @@ font-size: 12px;
 }
 .tyresBox {
 float: left;
-width: 265px;
+width: auto;
 color: #000;
 margin-top: 10px;
 margin-right: 15px;
@@ -3698,4 +3698,21 @@ table.withlines {
 }
 .car__sizes__diameters .active-diameter {
   background-color: #e7e7e7;
+}
+.selectionCarImg {
+  max-height: 150px;
+  height: 150px;
+  display: flex;
+  background-color: #f2f2f2;
+  padding: 10px;
+  border-radius: 30px 30px 0 0;
+  justify-content: center;
+  box-shadow: 10px 5px 5px #d4d4d4;
+  margin: 10px;
+  width: auto;
+  position: relative;
+}
+.selectionCarImg img {
+  object-fit: contain;
+  max-width: 100%;
 }
