--- a/app/webroot/css/main-style.v2.css
+++ b/app/webroot/css/main-style.v2.css
@@ -731,7 +731,9 @@ input {
 #CarViewForm .item.item5 {
 }
 .filter-group .item .item-inner .inp {
-
+  display: flex;
+  width: 100%;
+  text-decoration: none;
 }
 .filter-group .item .item-inner .inp-et {
   display: flex;
@@ -1088,10 +1090,18 @@ input {
   text-decoration: none;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .selection .item span {
-  display: block;
-  margin-bottom: 10px;
+  margin: auto;
+  padding: 10px;
+  height: 90px;
+  display: flex;
+  align-items: center;
+}
+.selection .item span img {
+  width: 100%;
+  max-height: 100%;
 }
 .selection .item strong {
   display: block;
@@ -2133,7 +2143,7 @@ font-size: 12px;
 }
 .tyresBox {
 float: left;
-width: 265px;
+width: auto;
 color: #000;
 margin-top: 10px;
 margin-right: 15px;
@@ -2246,11 +2256,15 @@ padding-bottom: 0;
 padding-top: 5px;
 }
 .filter-group .item .sel-style1 {
-width: 100%;
-height: 40px;
-border-radius: 20px;
-border-color: #b5b5b5;
-padding: 0 10px;
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  padding: 0 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: #000000;
+  border: 1px solid #b5b5b5;
 }
 #ProductIndexForm .item.bt.bt2 {
 margin-top: -5px;
@@ -3475,6 +3489,7 @@ table.withlines {
   color: #316b16;
   font-weight: 600;
   font-size: 16px;
+  min-width: 13.3px;
 }
 .selection__modal-list {
   display: flex;
@@ -3490,6 +3505,60 @@ table.withlines {
 }
 .selection__modal-list-item:hover {
   color: #316b16;
+}
+.selection__modal__gen {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 20px;
+}
+.selection__modal__gen-item {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 210px;
+  text-align: center;
+  gap: 10px;
+}
+.selection__modal__gen-item img {
+  width: 100%;
+  max-width: 210px;
+  height: 90px;
+  object-fit: contain;
+}
+.selection__table {
+  margin-top: 20px;
+  width: 100%;
+}
+.selection__table table {
+  text-align: left;
+  width: 100%;
+  border-collapse: collapse;
+}
+.selection__table table thead {
+  margin-bottom: 15px;
+}
+.selection__table table thead th {
+  font-size: 12px;
+}
+.selection__table table tbody tr {
+  min-height: 46px;
+  height: 46px;
+  font-size: 14px;
+  cursor: pointer;
+  border-bottom: 1px solid rgb(229, 229, 229);
+}
+.selection__table table tbody tr:last-child {
+  border-bottom: none;
+}
+.selection__table table tbody tr:hover {
+  color: #4ba123;
+}
+.selection__main-td {
+  width: 100%;
+}
+.selection__secondary-td {
+  width: 25%;
 }
 .popup__wrapper {
   position: fixed;
@@ -3528,6 +3597,7 @@ table.withlines {
 /* width */
 .popup__content::-webkit-scrollbar {
   width: 10px;
+  cursor: pointer;
 }
 
 /* Track */
@@ -3545,4 +3615,104 @@ table.withlines {
 /* Handle on hover */
 .popup__content::-webkit-scrollbar-thumb:hover {
   background: #3a7021;
+}
+
+.car__sizes {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #f5f5f5;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.car__sizes__wrap {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  flex-direction: column-reverse;
+}
+
+.car__sizes ul {
+  padding: 0;
+  list-style: none;
+}
+
+.car__sizes__list {
+  margin-top: 10px;
+}
+
+.car__sizes__list li {
+  margin-top: 5px;
+}
+
+.car__sizes__list .is_active {
+  font-weight: 600;
+}
+
+.car__sizes__title {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.car__sizes__info {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.car__sizes img {
+  max-width: 70%;
+  object-fit: contain;
+  max-height: 120px;
+  margin: auto;
+  object-position: top;
+}
+
+.disk-wrapper {
+  width: 100%;
+}
+
+.car__sizes__diameters {
+  display: flex;
+}
+
+.car__sizes__diameters a {
+  border: 1px solid rgb(169, 166, 174);
+  height: 33px;
+  padding: 0 15px;
+  color: rgb(51, 51, 51);
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  text-decoration: auto;
+  font-size: 14px;
+}
+.car__sizes__diameters a:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.car__sizes__diameters a:last-child {
+  border-radius: 0 10px 10px 0;
+}
+.car__sizes__diameters .active-diameter {
+  background-color: #e7e7e7;
+}
+.selectionCarImg {
+  max-height: 150px;
+  height: 150px;
+  display: flex;
+  background-color: #f2f2f2;
+  padding: 10px;
+  border-radius: 30px 30px 0 0;
+  justify-content: center;
+  box-shadow: 10px 5px 5px #d4d4d4;
+  margin: 10px;
+  width: auto;
+  position: relative;
+}
+.selectionCarImg img {
+  object-fit: contain;
+  max-width: 100%;
 }
