--- a/app/webroot/css/main-style.v2.css
+++ b/app/webroot/css/main-style.v2.css
@@ -3716,3 +3716,139 @@ table.withlines {
   object-fit: contain;
   max-width: 100%;
 }
+
+.list-view__grid {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.list-view__item {
+  display: grid;
+  background-color: #ffffff;
+  box-shadow: 1px 1px 3px #9f9f9f;
+  border: 0;
+  padding: 20px;
+  gap: 30px;
+  grid-template-rows: repeat(3, auto);
+  grid-template-columns: auto;
+}
+.list-view__info-col .akb-polarity {
+  display: none;
+}
+.list-view__info-col table tbody {
+  text-align: left;
+  font-size: 14px;
+}
+.list-view__info-col table tbody h3 {
+  margin: 0 0 10px 0;
+}
+.list-view__info-col table tbody tr th, td {
+  padding-bottom: 3px;
+}
+.list-view__info-col table tbody tr td {
+  padding-left: 10px;
+}
+.list-view__img-col .prodImg {
+  height: 100%;
+  max-height: 200px;
+  max-width: 200px;
+  width: 200px;
+}
+.list-view__img-col .prodImg img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.list-view__img-col {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  margin: auto;
+}
+.list-view__price-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  align-items: center;
+  gap: 5px;
+}
+.product__info-prices {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.product__info-price {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.product__info-number {
+  font-size: 18px;
+  font-weight: bold;
+}
+.product__info-number-red {
+  font-size: 20px;
+  color: #c72e30;
+}
+.product__info-title {
+  margin-top: 3px;
+  padding-left: 18px;
+}
+.product__info-recycle {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: -30px;
+}
+.product__info-buy a {
+  min-width: 117px;
+  width: fit-content;
+  display: block;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+}
+.position-relative {
+  position: relative;
+}
+.akb-polarity {
+  position: absolute;
+  left: 160px;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  gap: 3px;
+  z-index: 1;
+}
+.akb-polarity span {
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.akb-polarity-red {
+  background-color: #c72e30;
+}
+.akb-polarity-blue {
+  background-color: #0034ff;
+}
+.list-view__img-warranty {
+  color: black;
+  display: flex;
+  background-color: #e5e4eb;
+  text-align: center;
+  justify-content: center;
+  padding: 3px 0;
+  width: 202px;
+  margin-top: -10px;
+}
