--- a/app/webroot/css/main-style.v2.css
+++ b/app/webroot/css/main-style.v2.css
@@ -2281,6 +2281,7 @@ border: 1px solid #cccccc;
 }
 .brend th {
 text-align: right;
+  width: 30%;
 }
 .brend tr:nth-of-type(even) td,
 .brend tr:nth-of-type(even) th {
@@ -3753,7 +3754,11 @@ table.withlines {
   height: 100%;
   max-height: 200px;
   max-width: 200px;
-  width: 200px;
+  width: 100%;
+
+}
+.list-view__img-col .prodImg a {
+  cursor: zoom-in;
 }
 .list-view__img-col .prodImg img {
   object-fit: cover;
@@ -3766,6 +3771,7 @@ table.withlines {
   flex-direction: column;
   position: relative;
   margin: auto;
+  width: 100%;
 }
 .list-view__price-col {
   display: flex;
@@ -3779,6 +3785,8 @@ table.withlines {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  align-self: flex-start;
+  margin-left: 10px;
 }
 .product__info-price {
   display: flex;
@@ -3811,8 +3819,29 @@ table.withlines {
   border-radius: 5px;
   padding: 5px;
 }
+.boxPriceProd-price .product__info-price span {
+  font-size: 22px;
+}
+.boxPriceProd-price .product__info-price {
+  width: max-content;
+  margin: auto;
+}
+.boxPriceProd-price .product__info-number-red {
+  font-size: 26px !important;
+}
+.boxPriceProd-price .product__info-price:last-child {
+  margin-top: 6px;
+}
+.boxPriceProd-price .product__info-title {
+  font-size: 16px !important;
+  font-weight: normal;
+}
 .position-relative {
   position: relative;
+}
+.my-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .akb-polarity {
   position: absolute;
@@ -3849,6 +3878,75 @@ table.withlines {
   text-align: center;
   justify-content: center;
   padding: 3px 0;
-  width: 202px;
+  max-width: 202px;
+  width: calc(100% + 2px);
   margin-top: -10px;
+}
+.product__info__buy-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.tooltip-places {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  cursor: help;
+}
+
+.tooltip-places .tooltiptext {
+  visibility: hidden;
+  width: 250px;
+  max-width: 300px;
+  min-width: 200px;
+  background-color: #589b2f;
+  color: #000000;
+  text-align: left;
+  border-radius: 6px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -130px;
+}
+.tooltip-places .tooltiptext table {
+  width: 100%;
+  background: #f2f2f2;
+}
+.tooltip-places .tooltiptext table tbody tr td {
+  padding: 2px 2px 5px 2px;
+  border: 1px solid #316b16;
+}
+
+.tooltip-places .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #589b2f transparent transparent transparent;
+}
+
+.tooltip-places:hover .tooltiptext {
+  visibility: visible;
+}
+.tooltip-places-row-quantity {
+  text-wrap: nowrap;
+}
+.tooltip-places-title {
+  color: #FFFFFF;
+  padding-bottom: 5px;
+  font-weight: 600;
+  display: block;
+}
+.t1, .t2 {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  max-width: 100%;
+  overflow: hidden;
 }
